--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,11 +37,14 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background:  #5f2c82 url(../imagens/pexels-asphotograpy.jpg);
+    background:  #5f2c82 url(../imagens/pexels-asphotograpy.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
@@ -50,5 +53,4 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
-
 }
