--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -32,6 +32,14 @@ Grandes telas: acima de 1200px
         float: right;
         width: 60%;
     }
+
+    div#formulario > h1 {
+        font-size: 1.8em;
+    }
+
+    div#formulario > p {
+        font-size: 1em;
+    }    
 }
 
 @media screen and (min-width: 992px) 
@@ -45,14 +53,22 @@ Grandes telas: acima de 1200px
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
         background-position: center;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
