--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,13 +12,14 @@ Grandes telas: acima de 1200px
 */
 
 @media screen and (min-width: 768px) and (max-width: 992px) 
-{
+{ /* CONFIGURAÇÃO PARA TABLET */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 80vw;
+        height: 320px;
     }
 
     section#login > div#imagem {
@@ -38,18 +39,19 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-        font-size: 1em;
+        font-size: 1.1em;
     }    
 }
 
 @media screen and (min-width: 992px) 
-{
+{ /* CONFIGURAÇÃO PARA DESKTOP */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 950px;
+        height: 360PX;
     }
 
     section#login > div#imagem {
@@ -70,5 +72,6 @@ Grandes telas: acima de 1200px
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
